--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "one-tape-user",
+  "name": "one-tap-user",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,9 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
